chore: .yarnrc.ymlの不要な設定を削除、biome.jsonでquoteStyleをダブルに変更

--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,7 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
+      "quoteStyle": "double",
       "trailingComma": "es5",
       "semicolons": "always"
     }
