--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "check": "biome check --apply ."
   },
   "devDependencies": {
-    "@biomejs/biome": "1.5.3"
+    "@biomejs/biome": "1.5.3",
+    "typescript": "5.8.3",
+    "@types/node": "22.14.0"
   },
   "dependencies": {
     "fluent-ffmpeg": "2.1.3"
