--- a/biome.json
+++ b/biome.json
@@ -19,7 +19,7 @@
     "formatter": {
       "quoteStyle": "double",
       "trailingComma": "es5",
-      "semicolons": "always"
+      "semicolons": "asNeeded"
     }
   }
 }
