--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "format": "biome format --write .",
     "lint": "biome lint .",
-    "check": "biome check --apply ."
+    "check": "biome check --apply .",
+    "dev": "tsx src/index.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@types/fluent-ffmpeg": "2.1.27",
     "@types/node": "22.14.0",
+    "tsx": "4.19.3",
     "typescript": "5.8.3"
   },
   "dependencies": {
