feat: 音声生成機能を強化し、スクリプトの配列を動的に処理。MP3結合機能を呼び出すように修正。package.jsonにgenerateスクリプトを追加。

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "generate": "tsx src/index.ts",
     "format": "biome format --write .",
     "lint": "biome lint .",
-    "check": "biome check --apply .",
-    "dev": "tsx src/index.ts"
+    "check": "biome check --apply ."
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
