feat: biome.jsonにnoUnusedImportsルールを追加し、package.jsonでbiomeのバージョンを1.9.4に更新。pnpm-lock.yamlも対応するバージョンに変更。

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "recommended": true,
+      "correctness": {
+        "noUnusedImports": "error"
+      }
     }
   },
   "formatter": {
@@ -18,7 +21,7 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
-      "trailingComma": "es5",
+      "trailingCommas": "all",
       "semicolons": "always"
     }
   }
