--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "biome lint .",
     "check": "biome check .",
     "format": "biome format --write .",
-    "check:fix": "biome check --write ."
+    "check:write": "biome check --write .",
+    "fix": "pnpm format & pnpm check:write"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
