--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "check": "biome check .",
     "format": "biome format --write .",
     "check:write": "biome check --write .",
-    "fix": "pnpm format & pnpm check:write"
+    "fix": "pnpm format & pnpm check:write",
+    "ncu": "pnpm dlx npm-check-updates"
+  },
+  "dependencies": {
+    "dotenv": "16.5.0",
+    "fluent-ffmpeg": "2.1.3",
+    "openai": "4.96.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@types/fluent-ffmpeg": "2.1.27",
-    "@types/node": "22.14.0",
+    "@types/node": "22.15.2",
     "tsx": "4.19.3",
     "typescript": "5.8.3"
-  },
-  "dependencies": {
-    "dotenv": "16.4.5",
-    "fluent-ffmpeg": "2.1.3"
   }
 }
