feat: OpenAIクライアントを追加し、ChatGPT APIを呼び出す関数を実装。package.jsonに新しいスクリプトを追加。

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "gpt": "tsx src/lib/chatGpt/index.ts",
     "generate": "tsx src/index.ts",
     "lint": "biome lint .",
     "check": "biome check .",
