--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ncu": "pnpm dlx npm-check-updates"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "0.40.0",
     "dotenv": "16.5.0",
     "fluent-ffmpeg": "2.1.3",
     "openai": "4.96.0"
